<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist Maker</string>
    <string name="btnSearch">Поиск</string>
    <string name="btnMedia">Медиатека</string>
    <string name="btnSettings">Настройки</string>
    <string name="settingsHeader">@string/btnSettings</string>
    <string name="mediaHeader">@string/btnMedia</string>
    <string name="searchHeader">@string/btnSearch</string>
    <string name="userAgreementLabel">Пользовательское соглашение</string>
    <string name="supportLabel">Написать в поддержку</string>
    <string name="shareLabel">Поделиться приложением</string>
    <string name="shareMessage">Пройди курс разработчика Android приложений от Яндекс. Ссылка: https://practicum.yandex.ru/android-developer/</string>
    <string name="mailto">ignatov-ai@yandex.ru</string>
    <string name="mailTheme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mailMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreementLink">https://yandex.ru/legal/practicum_offer/</string>
    <string name="switchNightTheme">Тёмная тема</string>
    <string name="nothingWasFound">Ничего не нашлось</string>
    <string name="noInternet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="countryLabel">Страна</string>
    <string name="ganreLabel">Жанр</string>
    <string name="yearLabel">Год</string>
    <string name="albumNameLabel">Альбом</string>
    <string name="timeLabel">Длительность</string>
    <string name="practicumLink">https://practicum.yandex.ru/android-developer/</string>
    <string name="refreshButtonText">Обновить</string>
    <string name="historyHeaderLabelText">Вы искали</string>
    <string name="favouriteTabText">Избранные треки</string>
    <string name="playlistTabText">Плейлисты</string>
    <string name="newPlaylistButtonText">Новый плейлист</string>
    <string name="emptyFavouritesText">Ваша медиатека пуста</string>
    <string name="emptyPlaylistsText">Вы не создали\nни одного плейлиста</string>
    <string name="searchBottomMenuText">Поиск</string>
    <string name="mediaBottomMenuText">Медиатека\n</string>
    <string name="settingsBottomMenuText">Настройки</string>
    <string name="connectionErrorString">Проверьте подключение к интернету</string>
    <string name="serverErrorString">Ошибка сервера</string>
    <string name="newPlaylistHeaderText">Новый плейлист</string>
    <string name="newPlaylistNameFieldText">Название*</string>
    <string name="newPlaylistDescriptionFieldText">Описание</string>
    <string name="newPlaylistAddConfirm">Завершить создание плейлиста?</string>
    <string name="newPlalistUnsavedDataLost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="done">Завершить</string>
    <string name="playlistsIconsPermission">Данное разрешение необходимо для доступа к файлам изображения плейлиста</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="addedToPlaylist">Добавлен в плейлист</string>
    <string name="existInPlaylist">Трек уже добавлен в плейлист</string>
    <string name="sharePlaylist">Поделиться</string>
    <string name="editPlaylist">Редактировать информацию</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="deletePlaylistQuestion">Хотите удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="emptyPlaylist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="trackDeleteQuestion">Хотите удалить трек?</string>
    <string name="emptyPlaylistToast">В этом плейлисте нет треков</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>

    <plurals name="minutesText">
        <item quantity="one">минута</item>
        <item quantity="few">минуты</item>
        <item quantity="many">минут</item>
        <item quantity="other">минут</item>
    </plurals>

    <plurals name="tracksCount">
        <item quantity="one">трек</item>
        <item quantity="few">трека</item>
        <item quantity="many">треков</item>
        <item quantity="other">треков</item>
    </plurals>
</resources>