<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".settings.ui.fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ysregular"
            android:text="@string/settingsHeader"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_text_block"
        android:orientation="horizontal"
        android:paddingEnd="8dp">

        <TextView
            style="@style/settingsTextRow"
            android:text="@string/switchNightTheme"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/settingsSwither"
            app:trackTint="?attr/colorOnPrimarySurface"
            app:thumbTint="?attr/colorSurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_text_block">

        <TextView
            style="@style/settingsTextRow"
            android:text="@string/shareLabel"/>

        <ImageView
            android:id="@+id/share"
            style="@style/settingsImageRow"
            android:layout_marginRight="@dimen/margin_l_r"
            android:src="@drawable/share" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_text_block">

        <TextView
            style="@style/settingsTextRow"
            android:text="@string/supportLabel"/>

        <ImageView
            android:id="@+id/support"
            style="@style/settingsImageRow"
            android:src="@drawable/support" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_text_block">

        <TextView
            style="@style/settingsTextRow"
            android:text="@string/userAgreementLabel"/>

        <ImageView
            android:id="@+id/userAgreement"
            style="@style/settingsImageRow"
            android:src="@drawable/arrow_forward" />
    </LinearLayout>

</LinearLayout>