<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOnSecondary"
    tools:context=".newplaylist.ui.fragment.NewPlaylistFragment">

    <ImageButton
        android:id="@+id/backToMediaButton"
        android:layout_width="@dimen/size24dp"
        android:layout_height="@dimen/size24dp"
        android:layout_marginStart="@dimen/size16dp"
        android:layout_marginTop="@dimen/size16dp"
        android:background="@null"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/size4dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/newPlayListHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ysregular"
        android:textSize="@dimen/text_size"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginStart="@dimen/size24dp"
        android:text="@string/newPlaylistHeaderText"
        app:layout_constraintBottom_toBottomOf="@id/backToMediaButton"
        app:layout_constraintStart_toEndOf="@id/backToMediaButton"
        app:layout_constraintTop_toTopOf="@id/backToMediaButton" />

    <ImageView
        android:id="@+id/newPlaylistIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/size24dp"
        android:layout_marginTop="@dimen/size80dp"
        android:background="@drawable/new_playlist_icon"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/newPlaylistNameInputLayer"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPlaylistNameInputLayer"
        style="@style/TextInputLayoutNewPlaylist"
        android:layout_marginTop="@dimen/size32dp"
        android:hint="@string/newPlaylistNameFieldText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPlaylistIcon"
        app:layout_constraintBottom_toTopOf="@id/newPlaylistDescriptionInputLayer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPlaylistNameField"
            style="@style/EditTextNewPlaylist" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPlaylistDescriptionInputLayer"
        style="@style/TextInputLayoutNewPlaylist"
        android:layout_marginTop="@dimen/margin16dp"
        android:hint="@string/newPlaylistDescriptionFieldText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPlaylistNameInputLayer"
        app:layout_constraintBottom_toTopOf="@id/newPlaylistAddButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPlaylistDescriptionField"
            style="@style/EditTextNewPlaylist" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newPlaylistAddButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="Создать"
        android:textSize="16sp"
        android:textFontWeight="500"
        android:fontFamily="@font/ysmedium"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/new_playlist_add_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPlaylistDescriptionInputLayer"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/size16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>