<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".player.ui.fragments.PlayerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/margin24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/margin24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_labels_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/trackTimeMillsLabel" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin24dp" />

        <ImageView
            android:id="@+id/backToTracks"
            android:layout_width="@dimen/size16dp"
            android:layout_height="@dimen/size16dp"
            android:layout_marginLeft="@dimen/margin16dp"
            android:layout_marginTop="@dimen/margin16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/arrow_back"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/trackImage"
            android:layout_width="@dimen/size0dp"
            android:layout_height="@dimen/size0dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/left_guideline_24"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginTop="@dimen/size56dp"
            android:src="@drawable/noalbumicon"/>

        <TextView
            android:id="@+id/trackName"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/trackImage"
            app:layout_constraintStart_toStartOf="@id/left_guideline_24"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
            android:layout_marginTop="@dimen/size24dp"
            android:fontFamily="@font/ysmedium"
            android:textSize="@dimen/font22sp"
            android:textFontWeight="500"
            android:textColor="?attr/colorOnPrimary"
            android:text="Yesterday (Remastered 2009)"/>

        <TextView
            android:id="@+id/artistName"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            app:layout_constraintStart_toStartOf="@id/left_guideline_24"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
            android:layout_marginTop="@dimen/size12dp"
            android:fontFamily="@font/ysmedium"
            android:textSize="@dimen/font14sp"
            android:textFontWeight="500"
            android:textColor="?attr/colorOnPrimary"
            android:text="The Beatles "/>

        <ImageView
            android:id="@+id/playPauseButton"
            android:layout_width="@dimen/size100dp"
            android:layout_height="@dimen/size100dp"
            android:layout_marginTop="@dimen/size32dp"
            android:src="@drawable/playbutton"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
            app:layout_constraintStart_toStartOf="@id/left_guideline_24"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageView
            android:id="@+id/addToPlaylistButton"
            android:layout_width="@dimen/size52dp"
            android:layout_height="@dimen/size52dp"
            android:src="@drawable/addtoplaylistbutton"
            app:layout_constraintBottom_toBottomOf="@id/playPauseButton"
            app:layout_constraintStart_toStartOf="@id/left_guideline_24"
            app:layout_constraintTop_toTopOf="@id/playPauseButton" />

        <ImageView
            android:id="@+id/likeButton"
            android:layout_width="@dimen/size52dp"
            android:layout_height="@dimen/size52dp"
            android:src="@drawable/liketrackbuttonfalse"
            app:layout_constraintBottom_toBottomOf="@id/playPauseButton"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
            app:layout_constraintTop_toTopOf="@id/playPauseButton"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/playedTime"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/playPauseButton"
            app:layout_constraintStart_toStartOf="@id/left_guideline_24"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
            android:layout_marginTop="@dimen/size4dp"
            android:fontFamily="@font/ysmedium"
            android:textSize="@dimen/font14sp"
            android:textFontWeight="500"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:text="00:00"/>

        <!--    Параметр длительность-->
        <TextView
            android:id="@+id/trackTimeMillsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/playedTime"
            app:layout_constraintStart_toStartOf="@id/left_guideline_16"
            android:layout_marginTop="@dimen/size40dp"
            android:fontFamily="@font/ysregular"
            android:textSize="@dimen/font13sp"
            android:textFontWeight="500"
            android:text="@string/timeLabel"/>

        <TextView
            android:id="@+id/trackTimeMills"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="right"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
            app:layout_constraintStart_toStartOf="@id/left_labels_guideline"
            app:layout_constraintBaseline_toBaselineOf="@id/trackTimeMillsLabel"
            android:layout_marginStart="@dimen/margin8dp"
            android:fontFamily="@font/ysregular"
            android:layout_marginTop="@dimen/size40dp"
            android:textSize="@dimen/font13sp"
            android:textFontWeight="500"
            android:textColor="?attr/colorOnPrimary"
            android:text="5:35"/>

        <!--    Параметр альбом-->
        <TextView
            android:id="@+id/collectionNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/trackTimeMillsLabel"
            app:layout_constraintStart_toStartOf="@id/left_guideline_16"
            android:layout_marginTop="@dimen/margin16dp"
            android:fontFamily="@font/ysregular"
            android:textSize="@dimen/font13sp"
            android:textFontWeight="500"
            android:text="@string/albumNameLabel"/>

        <TextView
            android:id="@+id/collectionName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/ysregular"
            android:gravity="right"
            android:lines="1"
            android:layout_marginStart="@dimen/margin8dp"
            android:text="Yesterday (Remastered 2009) Yesterday (Remastered 2009) Yesterday (Remastered 2009)"
            android:textColor="?attr/colorOnPrimary"
            android:textFontWeight="500"
            android:textSize="@dimen/font13sp"
            app:layout_constraintBaseline_toBaselineOf="@id/collectionNameLabel"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
            app:layout_constraintStart_toStartOf="@id/left_labels_guideline" />

        <!--    Параметр год-->
        <TextView
            android:id="@+id/releaseDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/collectionNameLabel"
            app:layout_constraintStart_toStartOf="@id/left_guideline_16"
            android:layout_marginTop="@dimen/margin16dp"
            android:fontFamily="@font/ysregular"
            android:textSize="@dimen/font13sp"
            android:textFontWeight="500"
            android:text="@string/yearLabel"/>

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="right"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
            app:layout_constraintStart_toStartOf="@id/left_labels_guideline"
            app:layout_constraintBaseline_toBaselineOf="@id/releaseDateLabel"
            android:layout_marginStart="@dimen/margin8dp"
            android:fontFamily="@font/ysregular"
            android:textSize="@dimen/font13sp"
            android:textFontWeight="500"
            android:textColor="?attr/colorOnPrimary"
            android:text="1965"/>

        <!--    Параметр год-->
        <TextView
            android:id="@+id/primaryGenreNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/releaseDateLabel"
            app:layout_constraintStart_toStartOf="@id/left_guideline_16"
            android:layout_marginTop="@dimen/margin16dp"
            android:fontFamily="@font/ysregular"
            android:textSize="@dimen/font13sp"
            android:textFontWeight="500"
            android:text="@string/ganreLabel"/>

        <TextView
            android:id="@+id/primaryGenreName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="right"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
            app:layout_constraintStart_toStartOf="@id/left_labels_guideline"
            app:layout_constraintBaseline_toBaselineOf="@id/primaryGenreNameLabel"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginStart="@dimen/margin8dp"
            android:fontFamily="@font/ysregular"
            android:textSize="@dimen/font13sp"
            android:textFontWeight="500"
            android:textColor="?attr/colorOnPrimary"
            android:text="Rock"/>

        <TextView
            android:id="@+id/countryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/primaryGenreNameLabel"
            app:layout_constraintStart_toStartOf="@id/left_guideline_16"
            android:layout_marginTop="@dimen/margin16dp"
            android:fontFamily="@font/ysregular"
            android:textSize="@dimen/font13sp"
            android:textFontWeight="500"
            android:text="@string/countryLabel"/>

        <TextView
            android:id="@+id/country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="right"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
            app:layout_constraintStart_toStartOf="@id/left_labels_guideline"
            app:layout_constraintBaseline_toBaselineOf="@id/countryLabel"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginStart="@dimen/margin8dp"
            android:fontFamily="@font/ysregular"
            android:textSize="@dimen/font13sp"
            android:textFontWeight="500"
            android:textColor="?attr/colorOnPrimary"
            android:text="Великобритания Великобритания Великобритания Великобритания"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
        <!-- Панель с плейлистами -->

        <View
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/overlay"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/bottomSheetPlaylists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_sheet_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/size4dp"
            app:behavior_hideable="true"
            app:behavior_peekHeight="@dimen/size240dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            tools:visibility="gone">

            <View
                android:layout_width="@dimen/size52dp"
                android:layout_height="@dimen/size4dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin8dp"
                android:layout_marginBottom="@dimen/size12dp"
                android:background="@drawable/round_box" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size12dp"
                android:layout_marginTop="@dimen/size18dp"
                android:layout_marginBottom="@dimen/size12dp"
                android:textColor="?attr/colorOnPrimary"
                android:fontFamily="@font/ysmedium"
                android:textSize="@dimen/size19sp"
                android:textFontWeight="400"
                android:text="@string/addToPlaylist" />

            <Button
                android:id="@+id/buttonNewPlaylist"
                style="@style/refreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size16dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/newPlaylist" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playerRecycleViewPlaylists"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size24dp"
                tools:itemCount="15"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/playlist_bottom_sheet_item" />
        </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>